// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`BodyLarge should render as a "alert" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #DE331D;
}

<p
  class="circuit-0"
>
  alert
   BodyLarge
</p>
`;

exports[`BodyLarge should render as a "confirm" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #018730;
}

<p
  class="circuit-0"
>
  confirm
   BodyLarge
</p>
`;

exports[`BodyLarge should render as a "highlight" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  font-weight: 700;
}

<strong
  class="circuit-0"
>
  highlight
   BodyLarge
</strong>
`;

exports[`BodyLarge should render as a "quote" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  font-style: italic;
  padding-left: 12px;
  border-left: 2px solid #3063E9;
}

<blockquote
  class="circuit-0"
>
  quote
   BodyLarge
</blockquote>
`;

exports[`BodyLarge should render as a "subtle" variant 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
  color: #666;
}

<p
  class="circuit-0"
>
  subtle
   BodyLarge
</p>
`;

exports[`BodyLarge should render with default styles 1`] = `
.circuit-0 {
  font-weight: 400;
  font-size: 20px;
  line-height: 28px;
}

<p
  class="circuit-0"
>
  BodyLarge
</p>
`;
